--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -88,6 +88,9 @@ jobs:
     if: needs.check-version.outputs.should_build == 'true'
     runs-on: ubuntu-latest
     timeout-minutes: 60
+    permissions:
+      contents: read
+      packages: write
     steps:
       - name: Checkout 代码
         uses: actions/checkout@v4
@@ -143,6 +146,10 @@ jobs:
           
           echo "tags=$TAGS" >> $GITHUB_OUTPUT
           
+          # 构建日期和 Git commit
+          echo "build_date=$(date -u +'%Y-%m-%dT%H:%M:%SZ')" >> $GITHUB_OUTPUT
+          echo "vcs_ref=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+          
           echo ""
           echo "📦 构建信息:"
           echo "  基础镜像: debian:$DEBIAN_VERSION"
@@ -165,17 +172,54 @@ jobs:
           build-args: |
             SNELL_VERSION=${{ steps.prep.outputs.version }}
             BASE_VERSION=${{ steps.prep.outputs.debian_version }}
+            BUILD_DATE=${{ steps.prep.outputs.build_date }}
+            VCS_REF=${{ steps.prep.outputs.vcs_ref }}
+          labels: |
+            org.opencontainers.image.title=Snell Server
+            org.opencontainers.image.description=Multi-architecture Snell Server - Supports amd64, 386, arm64, armv7
+            org.opencontainers.image.version=${{ steps.prep.outputs.version }}
+            org.opencontainers.image.created=${{ steps.prep.outputs.build_date }}
+            org.opencontainers.image.revision=${{ steps.prep.outputs.vcs_ref }}
+            org.opencontainers.image.url=https://github.com/${{ github.repository }}
+            org.opencontainers.image.source=https://github.com/${{ github.repository }}
+            org.opencontainers.image.documentation=https://github.com/${{ github.repository }}#readme
+            org.opencontainers.image.vendor=${{ github.repository_owner }}
+            org.opencontainers.image.licenses=MIT
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
       - name: 构建摘要
         run: |
-          echo "### ✅ 构建完成 (debian)" >> $GITHUB_STEP_SUMMARY
+          echo "### ✅ 构建完成" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "**Snell 版本:** ${{ steps.prep.outputs.version }}" >> $GITHUB_STEP_SUMMARY
           echo "**Debian 版本:** ${{ steps.prep.outputs.debian_version }}" >> $GITHUB_STEP_SUMMARY
+          echo "**构建日期:** ${{ steps.prep.outputs.build_date }}" >> $GITHUB_STEP_SUMMARY
+          echo "**Git Commit:** ${{ steps.prep.outputs.vcs_ref }}" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "**支持架构:** linux/amd64, linux/386, linux/arm64, linux/arm/v7" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "**镜像标签:**" >> $GITHUB_STEP_SUMMARY
           echo '```' >> $GITHUB_STEP_SUMMARY
           echo "${{ steps.prep.outputs.tags }}" | tr ',' '\n' >> $GITHUB_STEP_SUMMARY
           echo '```' >> $GITHUB_STEP_SUMMARY
+```
+
+## 使用说明
+
+1. **替换占位符**：
+   - 将所有 `OWNER` 替换为你的 GitHub 用户名
+   - 将所有 `REPO` 替换为你的仓库名
+
+2. **文件结构**：
+```
+   your-repo/
+   ├── .dockerignore          # 新增
+   ├── .github/
+   │   └── workflows/
+   │       └── build.yml      # 更新
+   ├── Dockerfile             # 更新
+   ├── entrypoint.sh
+   ├── README.md              # 完整文档（不会显示在 GHCR）
+   ├── README.ghcr.md         # 新增（GHCR 简介）
+   └── Version/
