--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -206,10 +206,12 @@ jobs:
           echo "**支持架构:** linux/amd64, linux/386, linux/arm64, linux/arm/v7" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "**镜像地址:**" >> $GITHUB_STEP_SUMMARY
-          echo "- GHCR: \`ghcr.io/${{ github.repository_owner }}/snell:${{ steps.prep.outputs.version }}\`" >> $GITHUB_STEP_SUMMARY
-          echo "- GHCR: \`ghcr.io/${{ github.repository_owner }}/snell:latest\`" >> $GITHUB_STEP_SUMMARY
+          echo "- GHCR: \`ghcr.io/cary17/snell:${{ steps.prep.outputs.version }}\`" >> $GITHUB_STEP_SUMMARY
+          echo "- GHCR: \`ghcr.io/cary17/snell:latest\`" >> $GITHUB_STEP_SUMMARY
+          echo "- Docker Hub: \`cary17/snell:${{ steps.prep.outputs.version }}\`" >> $GITHUB_STEP_SUMMARY
+          echo "- Docker Hub: \`cary17/snell:latest\`" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "**快速使用:**" >> $GITHUB_STEP_SUMMARY
           echo '```bash' >> $GITHUB_STEP_SUMMARY
-          echo "docker run -d -p 20000:20000 -e PSK=your_password ghcr.io/${{ github.repository_owner }}/snell:latest" >> $GITHUB_STEP_SUMMARY
+          echo "docker run -d -p 20000:20000 -e PSK=your_password ghcr.io/cary17/snell:latest" >> $GITHUB_STEP_SUMMARY
           echo '```' >> $GITHUB_STEP_SUMMARY
